--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,7 +21,10 @@
   "devDependencies": {
     "@types/node": "^16.18.0",
     "@types/react": "^18.2.0",
-    "@types/react-dom": "^18.2.0"
+    "@types/react-dom": "^18.2.0",
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.17"
   },
   "browserslist": {
     "production": [
